@@ -5,8 +5,10 @@ import java.util.Collection;
 import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import jakarta.persistence.CascadeType;
@@ -84,7 +86,9 @@ public abstract class Usuario implements UserDetails, Serializable {
 	public Collection<? extends GrantedAuthority> getAuthorities() {
 		return permissoes
 				.stream()
-				.map(p -> (GrantedAuthority) () -> p.getUsuarioRole().name()).toList(); //Mapeano as role
+				.map(p -> new SimpleGrantedAuthority(p.getUsuarioRole()
+						.name()))
+						.collect(Collectors.toList()); //Mapeano as role
 	}
 
 	@Override
